# timbrel

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/: base.yaml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: README.md  clone_fewshot.py  phonemize_bilingual.py  prosody_transfer.py
tests/: test_acoustic_model.py  test_adaptation.py  test_audio.py  test_cli.py  test_config.py  test_disentangle.py  test_frontend_bilingual.py  test_frontend_chinese.py  test_frontend_english.py  test_import.py  test_losses.py  test_normalize.py  test_phonemes.py  test_prosody_transfer.py  test_speaker_encoder.py  test_variance.py
timbrel/: __init__.py  cli.py  config.py  inference.py  losses.py  trainer.py  utils.py
timbrel/adaptation/: __init__.py  enroll.py  finetune.py
timbrel/audio/: __init__.py  melbank.py  pitch.py  stft.py
timbrel/data/: __init__.py  dataset.py  meta.py
timbrel/frontend/: __init__.py  bilingual.py  chinese.py  en_lexicon.py  english.py  normalize.py  phonemes.py  segment.py
timbrel/models/: __init__.py  acoustic.py  attention.py  condln.py  decoder.py  disentangle.py  layers.py  prosody_encoder.py  speaker_encoder.py  text_encoder.py  variance.py
timbrel/prosody/: __init__.py  transfer.py
