[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "timbrel"
dynamic = ["version"]
description = "Bilingual multi-speaker voice-cloning acoustic model with disentangled timbre and transferable prosody"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jiang Que" }]
keywords = [
  "text-to-speech",
  "voice-cloning",
  "speaker-adaptation",
  "prosody-transfer",
  "disentanglement",
  "pytorch",
  "bilingual",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.23,<2",
  "pypinyin>=0.49",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.5",
  "build>=1.0",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/emilymartin456/timbrel"
Repository = "https://github.com/emilymartin456/timbrel"
Issues = "https://github.com/emilymartin456/timbrel/issues"

[project.scripts]
timbrel = "timbrel.cli:main"

[tool.hatch.version]
path = "timbrel/version.py"

[tool.hatch.build.targets.wheel]
packages = ["timbrel"]
